# story-fellow

./: .gitignore  Makefile  README.md  docs-cloudcraft-architecture-guide.md  pyproject.toml  template.yaml
check-storycast-status/: app.py
create-job-from-url/: app.py
docs/: TECHNICAL.md  deployment-guide.md
generate-upload-url/: app.py
infra/terraform/: api.tf  dynamodb.tf  events.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sns.tf  terraform.tfvars.example  variables.tf  website.tf
polly-task-status-updater/: app.py
samples/: sample-story-1.txt  sample-story-ssml.txt
start-storycast/: app.py
web/: index.html
