[project]
name = "ai-storycast"
version = "0.1.0"
description = "Serverless text-to-audio pipeline using AWS Polly"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".aws-sam", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
